# pyplotman

./: README.md  pyproject.toml
src/pyplotman/: __init__.py  plotter.py
