[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplotman"
version = "0.1.0"
description = "Custom plot manager for python as matplotlib wrapper with automatic multi-format and HDF5 saving"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "h5py",
]

[tool.setuptools.packages.find]
where = ["src"]
